@@ -13,6 +13,7 @@ rdesktop (1.5.0)
   * Large file support
   * The default color depth is now the depth of the root window
   * Basic support for Windows Vista Beta 2
+  * Fix high cpu-usage in OSS-driver
 
 rdesktop (1.4.1)
    * persistent bitmap cache optimisations
